# welcoming_robot

./: .clinerules  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  FEATURES.md  INSTALLATION_GUIDE.md  LICENSE  Modelfile_gemma3  Modelfile_gemma4e2b  Modelfile_gemma4e4b  Modelfile_qwen  PHASE_2B_QUICKSTART.md  PROJECT_STRUCTURE.md  README.md  TESTING_READY.md  TEST_PLAN.md  benchmark_llm_results.json  requirements_minimal.txt  setup_rpi4_dev.sh  setup_rpi4_quick.sh  setup_ubuntu.sh  vibe_coding流程.md  專題計畫.md  程式執行步驟.txt
backend_server/: __init__.py
communication/: __init__.py
config/: inference_config.yaml
core_workflow/: __init__.py
database/: schema.py
docs/: LLM規劃書.md  vibe_coding流程.md  實作工作流程.md  實驗設計_報告數據.md  專題計畫.md  常用指令_樹莓派自編版.txt  常用指令_虛擬機編譯版.txt  底盤與韌體分析.md  架構參考.md  計畫書_2026-04-22.md  進度統整報告_2026-04-22.md  部署與重現指南.md  驗證與實作清單.md
maps/: lab_20260721.pgm  lab_20260721.yaml
robot_navigation/: __init__.py
scripts/: benchmark.py  benchmark_llm_models.py  build_arm64.sh  check_handbook.py  download_audio_models.sh  download_models.py  exp_face_logger.py  manage_vip_database.py  model_guide.py  realtime_detection.py  realtime_detection_insightface.py  realtime_detection_opencv_dnn.py  realtime_detection_picamera2.py  realtime_detection_yolov8.py  realtime_detection_yolov8_onnx.py  register_from_photo.py  test_vip_recognition.py  vip_database_manager.py
smartnav-bot/src/smartnav_brain/: package.xml  setup.py
smartnav-bot/src/smartnav_bringup/: CMakeLists.txt
smartnav-bot/src/smartnav_hmi/: package.xml  setup.py
smartnav-bot/src/smartnav_hmi/launch/: hmi.launch.py
smartnav-bot/src/smartnav_hmi/web/: index.html
smartnav-bot/src/smartnav_llm/: setup.py
smartnav-bot/src/smartnav_msgs/: CMakeLists.txt
smartnav-bot/src/smartnav_msgs/action/: Navigate.action
smartnav-bot/src/smartnav_msgs/msg/: RecognitionResult.msg
smartnav-bot/src/smartnav_navigation/: setup.py
smartnav-bot/src/smartnav_vision/: setup.py
speech_hmi/: __init__.py
src/: llm_api_client.py
src/ai_vision/: __init__.py  face_detector.py  face_recognizer.py  liveness_detector.py
src/astra_camera/src/: ob_camera_node.cpp  ros_param_backend.cpp
src/database/: __init__.py  schema.py
src/ldlidar_ros2/ldlidar/: package.xml
src/llm_server/: llm_client.py  main.py  models.py
src/llm_server/static/: chat.html  index.html
src/lslidar_driver/: README.md
src/lslidar_driver/config/: filter_angle.yaml  lslidar_ch.yaml  lslidar_cx.yaml  lslidar_cx_left.yaml  lslidar_cx_right.yaml  lslidar_ls.yaml  lslidar_x10.yaml  network_setup.yaml
src/lslidar_driver/launch/: lslidar_ch_launch.py  lslidar_ls_launch.py  lslidar_x10_launch.py
src/lslidar_driver/rviz/: lslidar_ch.rviz  lslidar_cx.rviz  lslidar_ls.rviz  lslidar_x10.rviz
src/lslidar_driver/src/: lsiosr.cpp  lslidar_ch_driver.cpp  lslidar_cx_driver.cpp  lslidar_driver_node.cpp  lslidar_ls_driver.cpp  lslidar_services.cpp
src/lslidar_msgs/: CMakeLists.txt  package.xml
src/ollama_ros_chat/: setup.py
src/ollama_ros_chat/config/: ollama_params.yaml
src/scripts/: benchmark.py  demo_phase2b.py  main.py  manage_vip_database.py  realtime_detection_insightface.py  test_llm_controller.py  test_vip_recognition.py
src/smartnav_audio/: package.xml  requirements.txt  setup.cfg  setup.py
src/smartnav_audio/smartnav_audio/: audio_player.py  speech_synthesizer_node.py  voice_playback_node.py
src/smartnav_brain/: package.xml  setup.cfg  setup.py
src/smartnav_bringup/: package.xml
src/smartnav_bringup/launch/: smartnav.launch.py
src/smartnav_hmi/: package.xml  setup.cfg  setup.py
src/smartnav_llm/: package.xml  requirements.txt  setup.cfg
src/smartnav_llm/config/: system_prompt.txt
src/smartnav_llm/launch/: llm.launch.py
src/smartnav_llm/smartnav_llm/: llm_service_node.py  llm_utils.py  ollama_chat_bridge.py
src/smartnav_navigation/: package.xml  setup.cfg
src/smartnav_navigation/config/: burger.yaml  empty_map.yaml
src/smartnav_navigation/launch/: nav2.launch.py
src/smartnav_navigation/smartnav_navigation/: map_service_node.py  waypoint_service_node.py
src/smartnav_ros2/smartnav_brain/: package.xml  setup.py
src/smartnav_ros2/smartnav_brain/launch/: brain.launch.py  nav2.launch.py
src/smartnav_ros2/smartnav_brain/smartnav_brain/: navigation_action_node.py
src/smartnav_ros2/smartnav_bringup/: CMakeLists.txt  package.xml
src/smartnav_ros2/smartnav_bringup/launch/: smartnav.launch.py
src/smartnav_ros2/smartnav_vision/: package.xml  setup.py
src/smartnav_ros2/smartnav_vision/smartnav_vision/: database_manager.py  face_engine.py  face_recognition_node.py  face_registration_node.py  face_utils.py  recognition_text_bridge_node.py
src/smartnav_vision/: package.xml  requirements.txt  setup.cfg
src/turn_on_wheeltec_robot/: package.xml
src/wheeltec/lslidar_driver/: CMakeLists.txt  README_EN.md  package.xml
src/wheeltec/lslidar_driver/include/lslidar_driver/: lsiosr.hpp  lslidar_device_info.hpp
src/wheeltec/lslidar_driver/launch/: lslidar_cx_launch.py  lslidar_double_launch.py
src/wheeltec/lslidar_driver/src/: input.cpp  lslidar_device_info.cpp  lslidar_x10_driver.cpp
src/wheeltec/turn_on_wheeltec_robot/: CMakeLists.txt
src/wheeltec/turn_on_wheeltec_robot/config/: robot_model.yaml
src/wheeltec/turn_on_wheeltec_robot/launch/: wheeltec_ekf.launch.py
src/wheeltec/turn_on_wheeltec_robot/src/: wheeltec_robot.cpp
src/wheeltec_mic_msg/: CMakeLists.txt
src/wheeltec_mic_ros2/: CMakeLists.txt
src/wheeltec_mic_ros2/config/msc/res/asr/GrmBuilld/: call.g
src/wheeltec_mic_ros2/include/: record_param.h  shared_memory.h  user_interface.h  voice_control.h  wheeltec_m2n.h  wheeltec_mic.h
src/wheeltec_mic_ros2/launch/: base.launch.py  mic_init.launch.py
src/wheeltec_mic_ros2/scripts/: ch9102_udev.sh
src/wheeltec_mic_ros2/src/: motion_control.cpp  node_feedback.cpp  voice_control.cpp  wheeltec_m07.cpp  wheeltec_m2n.cpp
src/wheeltec_robot_nav2/: package.xml
src/wheeltec_slam_toolbox/: package.xml
vision_ai/: face_detector_mediapipe.py  face_recognizer.py  inference_engine.py
(+216 files in other folders)
