<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smartnav_bringup</name>
  <version>0.0.1</version>
  <description>SmartNav 系統啟動整合套件 - 統一啟動 vision、audio、llm、navigation</description>
  <maintainer email="swient@todo.todo">swient</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>

  <exec_depend>smartnav_vision</exec_depend>
  <exec_depend>smartnav_audio</exec_depend>
  <exec_depend>smartnav_llm</exec_depend>
  <exec_depend>smartnav_navigation</exec_depend>
  <!-- WHEELTEC 整合（2026-07-06）：底盤與雙版本可選方案 -->
  <exec_depend>turn_on_wheeltec_robot</exec_depend>
  <exec_depend>wheeltec_mic_ros2</exec_depend>
  <exec_depend>ollama_ros_chat</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
