<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smartnav_hmi</name>
  <version>0.0.0</version>
  <description>平板/瀏覽器 HMI：rosbridge websocket + 靜態網頁（辨識結果、對話、相機串流）</description>
  <maintainer email="swient@todo.todo">swient</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>smartnav_msgs</depend>
  <!-- 瀏覽器↔ROS 橋接（apt: ros-jazzy-rosbridge-server） -->
  <exec_depend>rosbridge_server</exec_depend>
  <!-- 相機畫面串流給網頁的 <img>（apt: ros-jazzy-web-video-server） -->
  <exec_depend>web_video_server</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
