<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smartnav_brain</name>
  <version>0.0.1</version>
  <description>SmartNav 移動導航功能包 - 地圖服務、路徑規劃、導航控制</description>
  <maintainer email="swient@todo.todo">swient</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>action_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>smartnav_msgs</depend>
  <depend>frontier_exploration_ros2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
