<?xml version="1.0"?>
<package format="3">
  <name>lslidar_driver</name>
  <version>5.1.1</version>
  <description>lslidar_driver: Core driver handling device communication and data processing</description>
  <maintainer email="jianjiangxie@lslidar.com">lslidar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>lslidar_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>ament_index_cpp</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>libpcap</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>eigen</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>lslidar_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>libpcap</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
